--- a/custom/check_management_15/views/account_payment_views.xml
+++ b/custom/check_management_15/views/account_payment_views.xml
@@ -47,6 +47,9 @@
                          attrs="{'invisible': [ ('state_check', '!=', 'loan')]}">Loan
                     </div>
                     <div class="badge-pill badge-success float-right"
+                         attrs="{'invisible': [ ('state_check', '!=', 'insured')]}">Insured
+                    </div>
+                    <div class="badge-pill badge-success float-right"
                          attrs="{'invisible': [ ('state_check', '!=', 'refund_from_discount')]}">Refund From Discount
                     </div>
                                         <div class="badge-pill badge-success float-right"
